@@ -741,6 +741,13 @@ stopifnot(exprs = {
 })
 ## all these where -Inf  in R <= 4.0.x
 
+## pnorm(x) returns non-zero for a bit larger |x|, now returning denormalized
+(pL <- pnorm(-38.4))
+stopifnot(pL > 0, all.equal(6.6015999e-323, pL),
+          pL == pnorm(38.4, lower.tail=FALSE),
+          pnorm(-38.46739999) == 2^-1074)
+## in R <= 4.4.x, the non-zero boundary was at -37.5193
+
 
 ## qnbinom(*, size=<large>, mu=<small>) -- PR#18095:
 qi  <- 0:16
@@ -879,7 +886,7 @@ prb <- 0.995
 (pqb6   <- pbinom(qb6,   size = sz, prob = prb))
 (pqb6_1 <- pbinom(qb6-1, size = sz, prob = prb))
 stopifnot(exprs = {
-    qb6 == c(6001:6004,6004:6005) # not in R 4.4.0, nor 4.1.1
+    qb6 == c(6001:6004,6004:6005) # not so in R 4.4.0, nor 4.1.1
     1 > pqb6 & pqb6 >= 0.05       #  "
     0.05 > pqb6_1 & pqb6_1 >= 0.035# "
 })
